# geojson2osmnotes

./: README.md  config.py  main.py  open_notes.md  pyproject.toml  sample_config.py
models/: GeojsonHandler.py  bounding_box.py  exceptions.py  osm_note_uploader.py
test_data/: notes.csv
tests/: test_GeojsonHandler.py  test_bounding_box.py  test_osm_note_uploader.py
