[tool.poetry]
name = "geojson2osmnotes"
version = "0.1.0"
description = "The purpose of this script is to import geojson features as osm notes."
authors = ["Dennis Priskorn"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "^2.3.0"
argparse = "^1.4.0"
requests = "^2.31.0"
rich = "^13.5.2"
geopandas = "^0.14.0"
geopy = "^2.4.0"
osmapi = "^4.0.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^23.1.0"
codespell = "^2.2.2"
coverage = "^7.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
pre-commit = "^3.0.4"
pytest = "^7.2.1"
pyupgrade = "^3.3.1"
types-python-dateutil = "^2.8.19.13"
types-requests = "^2.31.0.1"
ruff = "^0.0.278"
safety = "^2.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
